--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
       <script type="text/javascript" src="js/angular.min.js"></script>
       <script type="text/javascript" src="js/angular-uuid.js"></script>
       <script type="text/javascript" src="js/ui-bootstrap-0.14.3.js"></script>
-      <script type="text/javascript" src="cordova.js"></script>
+      <!--<script type="text/javascript" src="cordova.js"></script>-->
       <script type="text/javascript" src="js/index.js"></script>
       <script src="js/jasny-bootstrap.min.js"></script>
       <script type="text/javascript" src="js/credentials.js"></script>
